Fix BA links having green border color (only dark mode)

--- a/resources/less/forum/extension.less
+++ b/resources/less/forum/extension.less
@@ -459,6 +459,17 @@ body.dark {
         border-left: 4px solid fade(@green, 50%);
     }
 
+    .DiscussionPage
+        .PostStream
+        .PostStream-item
+        .Post
+        .item-bestAnswerPost
+        .Post-body
+        a {
+        color: unset;
+        border-bottom-color: unset;
+    }
+
     .Post--BestAnswer a .username {
         color: @black;
     }
